--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^24.9.0",
     "@types/react": "19.2.2",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
